# HexsGame

./: CMakeLists.txt
src/: HexBoard.cpp  HexBoard.h  game.cpp  game.h  hex.cpp  hex.h  main.cpp
